linkedlist and example1 added

--- a/github-java stuff/src/ctcr_codes/ctcr_codes/.gitignore
+++ b/github-java stuff/src/ctcr_codes/ctcr_codes/.gitignore
@@ -2,3 +2,7 @@
 /BinaryTreeImpl.class
 /TreeNode.class
 /StackImpl.class
+/LinkedListImpl.class
+/ListOperations.class
+/Node.class
+/Example1.class
